# diarization-benchmark

./: .gitignore  AGENTS.md  README.md  pyannote_baseline.py  pyproject.toml
.serena/: project.yml
context-retrieval/results/: RESULTS.md
diarization/: README.md
diarization/results/: RESULTS.md  results.json
diarization/src/mimicscribe_bench/: cli.py  download.py  reattribute.py  run_pipeline.py  score.py
meeting-assistant/: README.md
meeting-assistant/results/: RESULTS.md
meeting-search/: README.md
meeting-search/results/: RESULTS.md
results/: RESULTS.md
src/mimicscribe_bench/: score.py
